--- a/wp-content/themes/lesam/assets/css/custom.css
+++ b/wp-content/themes/lesam/assets/css/custom.css
@@ -40,6 +40,75 @@ h3.yentu{
 /* .list-term::-webkit-scrollbar {
     background: transparent;
 } */
+
+.section__camnang--block .col-inner {
+    background: #FFFFFF;
+    -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+    overflow: hidden;
+    height: 100%;
+}
+
+.section__camnang--title {
+    padding: 10px 20px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    color: #000;
+}
+
+.section__camnang--title:hover {
+    color: #DE0000;
+}
+
+.intro-home-7.section__ctv {
+    padding-bottom: 0;
+}
+
+.slick-arrow {
+    background: #F15F25;
+    color: #fff !important;
+    padding: 10px;
+    width: 44px;
+}
+
+.article-blog {
+    margin: 0 10px;
+    overflow: hidden;
+    padding: 20px;
+    background: #fff;
+    border-radius: 14px;
+}
+
+.article-blog .entry-title {
+    font-size: 20px;
+    color: #1b1919;
+}
+
+.article-blog .entry-content {
+    color: #4c4c4c;
+}
+.article-blog .post-date {
+    position: absolute;
+    background: #fff;
+    top: 15px;
+    left: 15px;
+    padding: 0px 13px;
+    text-transform: uppercase;
+}
+
+.article-blog .entry-head {
+    position: relative;
+}
+
+.article-blog .post-date-day {
+    font-size: 24px;
+}
+
+.article-blog .post-date-month {
+    font-size: 12px;
+}
 @media (max-width: 991px) {
     .list__term--item {
         width: calc(100% / 4 - 20px);
