--- a/wp-content/themes/lesam/assets/css/custom.css
+++ b/wp-content/themes/lesam/assets/css/custom.css
@@ -154,3 +154,72 @@ h3.yentu{
         margin: 10px 5px;
     }
 }
+
+/* 24/02/2024 17:15*/
+
+.contact-page {
+    margin: 30px 0 0 ;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+}
+
+.contact-page .detail_company {
+    margin-bottom: 10px;
+}
+
+.contact-page .detail_company .logo {
+    width: 240px;
+    margin-bottom: 30px;
+}
+
+.contact-page .detail_company .logo img{
+   width: 100%;
+}
+
+.contact-page .detail_company h3 {
+    font-size: 18px;
+    font-weight: 400;
+    color: #000;
+    margin-bottom: 20px;
+    border-bottom: 2px solid rgba(0,0,0,.1);
+    padding-bottom: 10px;
+}
+
+.contact-page .detail_company p {
+    font-size: 16px;
+    color: #000;
+}
+
+.contact-page .detail_company svg path{
+    fill: #000;
+}
+
+.contact-page .contact_form label{
+    color: #222;
+    font-weight: bold;
+    font-size: 14px;
+    margin-bottom: 6px;
+}
+
+.contact-page .contact_form input[type=text],
+.contact-page .contact_form input[type=email],
+.contact-page .contact_form textarea {
+    border-radius: 8px;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+    padding: 0 3px;
+    border: 1px solid #C2CFE0;
+    margin-bottom: 8px;
+    height: 40px;
+    width: 100%;
+}
+
+.contact-page .contact_form textarea {
+    min-height: 120px;
+}
+
+.contact-page .contact_form input[type=submit] {
+    background : #F15F25 !important;
+    color: #fff !important;
+    padding: 10px;
+    border-radius: 8px;
+    border: none;
+}
